2001-12-17  Mark McLoughlin  <mark@skynet.ie>

        * ChangeLog: trim some gen_util entries.

2001-11-26  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add desk-guide to SUBDIRS.

2001-11-23  Alexander Larsson  <alla@lysator.liu.se>

        * Makefile.am:
	Build gen_util

2001-08-14  Kjartan Maraas  <kmaraas@gnome.org>

	* */*.sgml: Fix up the sgml a bit.
	
2001-08-03  Abel Cheung  <maddog@linux.org.hk>

	* */*.{soundlist,desktop,directory} : Reviewed/Modified/Added
	  traditional Chinese strings.

2001-08-02  Kjartan Maraas  <kmaraas@gnome.org>

	* */*.[desktop,soundlist]: Added nynorsk.
	
2001-07-17  jacob berkman  <jacob@ximian.com>

	* gen_util/popcheck.c (imap_check): make this actually compile and
	have some sane indenting and stuff.

	it amazes me that this code got in and stuff.

Wed Jul 11 14:23:39 2001  George Lebl <jirka@5z.com>

	* gen_util/popcheck.c: apply and massage patch from Jon Bowman
	  <jon.bowman@sun.com>toaccept multiline output from the IMAP server

2001-07-05  Kjartan Maraas  <kmaraas@gnome.org>

	* gen_util/main.c: Include <config.h> at the top.
	* gen_util/mailcheck.c: Fix _() marking of about box.
	* mailcheck.soundlist: Norwegian translation.
		
2001-06-25  Kjartan Maraas  <kmaraas@gnome.org>

	* gen_util/mailcheck.c: Fix typo in the about box.
	
2001-06-23 Manuel de Vega Barreiro <mbarreiro@red.madritel.es>
	
	* applets/gen_util/help/Makefile.am: Included es for mailcheck
	  Spanish Translation.
	* applets/gen_util/help/es/mailcheck: Spanish Translation

2001-06-20  Kjartan Maraas  <kmaraas@gnome.org>

	* applets/gen_util/clock.c: Remove trailing comma in enum.
	From Dan McNichol <mcnichol@austin.ibm.com>
	
2001-06-07  Christian Rose  <menthos@menthos.com>

	* applets/gen_util/mailcheck.soundlist: Added Swedish
	translation.

2001-06-05  Christian Rose  <menthos@menthos.com>

	* applet-dirs/Clocks.directory, applet-dirs/Monitors.directory,
	applet-dirs/Multimedia.directory, applet-dirs/Network.directory,