@@ -49,7 +49,6 @@ AC_SUBST(GTK_REQUIRED)
 AC_SUBST(GDK_PIXBUF_REQUIRED)
 AC_SUBST(LIBGLADE_REQUIRED)
 AC_SUBST(LIBGNOME_REQUIRED)
-dnl AC_SUBST(LIBGNOME1COMPAT_REQUIRED)
 AC_SUBST(LIBGNOMECANVAS_REQUIRED)
 AC_SUBST(ORBIT_REQUIRED)
 AC_SUBST(XML_REQUIRED)
@@ -277,24 +276,6 @@ AC_CHECK_LIB(png, png_init_io, [
 	     AC_MSG_ERROR(libpng is required for gnome-core)], -lm)
 AC_SUBST(PNG_LIBS)
 
-dnl  ------------------
-dnl | Check for libbz2 |---------------------------------------
-dnl  ------------------
-oLIBS="$LIBS"
-BZ_LIBS=""
-AC_CHECK_LIB(bz2, bzopen, [
-	AC_DEFINE(HAVE_LIBBZ2)
-	LIBS=$oLIBS
-	BZ_LIBS="-lbz2"
-	], AC_CHECK_LIB(bz2, BZ2_bzopen, [
-	   AC_DEFINE(HAVE_LIBBZ2)
-	   AC_DEFINE(HAVE_LIBBZ2_1_0)
-	   LIBS=$oLIBS
-	   BZ_LIBS="-lbz2"
-	   ], AC_MSG_WARN([Recent enough BZ2 library not found. Help-Browser will not be able to read bzipped man/info pages])
-))
-AC_SUBST(BZ_LIBS)
-dnl -----------------------------------------------------------
 
 dnl  -----------------------------
 dnl | Place to look for KDE menus |----------------------------
