@@ -6,6 +6,7 @@ gnome-desktop/gnome-hint.c
 gnome-desktop/gnome-hint.h
 gnome-terminal/gnome-terminal.c
 gnome-terminal/gnome-terminal.glade
+gnome-terminal/gnome-terminal.glade.h
 gnome-terminal/gnome-terminal.h
 gnome-terminal/gnome-terminal.xml
 gnome-terminal/gnome-x-font-selector.c
@@ -54,6 +55,7 @@ smproxy/save.c
 smproxy/smproxy.h
 smproxy/smproxy.c
 applets/fish/fish.c
+applets/fish/GNOME_FishApplet_Factory.server.in
 applets/gen_util/main.c
 applets/gen_util/clock.c
 applets/gen_util/clock.h
@@ -62,6 +64,7 @@ applets/gen_util/pager.c
 applets/gen_util/pager.h
 applets/gen_util/tasklist.c
 applets/gen_util/tasklist.h
+applets/gen_util/GNOME_GenUtilApplet_Factory.server.in.in
 applets/desk-guide/gwmh.c
 applets/desk-guide/gwmh.h
 applets/desk-guide/gstc.c
@@ -93,8 +96,10 @@ panel/global-keys.h
 panel/GNOME_Panel.server.in
 panel/gnome-panel-properties.c
 panel/gnome-panel-properties.glade
+panel/gnome-panel-properties.glade.h
 panel/gnome-panel-screenshot.c
 panel/gnome-panel-screenshot.glade
+panel/gnome-panel-screenshot.glade.h
 panel/gnome-run.c
 panel/gnome-run.h
 panel/launcher.c
