@@ -1,3 +1,9 @@
+2002-01-16  Glynn Foster  <glynn.foster@sun.com>
+
+	* Makefile.am: Remove deskguide from building
+	* desk-guide/Makefile.am: Uncomment out stuff that
+	was originally commented out.
+
 2001-12-17  Mark McLoughlin  <mark@skynet.ie>
 
         * ChangeLog: trim some gen_util entries.
